init fork and rework

--- a/src/modules/main/app/app.html
+++ b/src/modules/main/app/app.html
@@ -1,20 +1,14 @@
 <template>
-	<div class="app">
-
-		<ui-toast></ui-toast>
-
-		<main-app-layout
-			app-name="App-Layout"
-			menu-header="Stuff"
-			onnavigate={navigate}
-			ontoast={toast}
-			side-items={things}>
-			
-			<span slot="content">
-				<main-view
-					view={currentView}
-				></main-view>
-			</span>
-		</main-app-layout>
-	</div>
+  <div class="app">
+    <div class="container">
+      <lightning-card title="Promo Replace" icon-name="utility:success">
+        <div class="slds-m-around_medium">
+          <div class="slds-text-heading_large">Hey there 👋</div>
+          <p>
+            This is a boilerplate to replace a Salesforce Login Promo Screen
+          </p>
+        </div>
+      </lightning-card>
+    </div>
+  </div>
 </template>
